<resources>
    <string name="app_name">SongRecommender</string>
    <string name="searching">Searching…</string>
    <string name="failed">Couldn\'t find a song! Please try again</string>
    <string name="search">Search</string>
    <string name="spotify_not_installed">Install Spotify and login to use this app</string>
    <string name="install">Install</string>

    <string name="track_saved">Song added to your Liked Songs</string>
    <string name="track_removed">Song removed from your Liked Songs</string>

    <string name="genre">Genre</string>
    <string name="emotion">Emotion</string>
    <string name="danceability">Danceability</string>
    <string name="acoustic">Acoustic</string>

    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="pop">Pop</string>
    <string name="pop_id">pop</string>

    <string name="ambient">Ambient</string>
    <string name="ambient_id">ambient</string>

    <string name="electronic">Electronic</string>
    <string name="electronic_id">electronic</string>

    <string name="hip_hop">Hip hop</string>
    <string name="hip_hop_id">hip-hop</string>

    <string name="indie_pop">Indie pop</string>
    <string name="indie_pop_id">indie-pop</string>

    <string name="metal">Metal</string>
    <string name="metal_id">metal</string>

    <string name="techno">Techno</string>
    <string name="techno_id">techno</string>

    <string name="country">Country</string>
    <string name="country_id">country</string>


</resources>
