<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="10">


    <!--    Genre    -->

    <TextView
        android:id="@+id/genreText"
        android:layout_row="0"
        android:layout_column="1"
        android:padding="10dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/genre" />

    <Spinner
        android:id="@+id/genreSpinner"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginBottom="40dp"
        android:layout_gravity="fill_horizontal"
        ></Spinner>


    <!--    Emotion    -->

    <TextView
        android:id="@+id/emotionText"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/happy" />

    <SeekBar
        android:id="@+id/emotionSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="2"
        android:padding="20dp"
        android:layout_marginBottom="40dp"
        android:progress="1" />

    <TextView
        android:id="@+id/sadText"
        android:layout_row="3"
        android:layout_column="0"
        android:padding="20dp"
        android:text="@string/sad" />

    <TextView
        android:id="@+id/happyText"
        android:layout_row="3"
        android:layout_column="2"
        android:padding="20dp"
        android:text="@string/happy" />


    <!--    Danceability    -->

    <TextView
        android:id="@+id/danceText"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/danceability" />

    <SeekBar
        android:id="@+id/danceSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="2"
        android:padding="20dp"
        android:layout_marginBottom="40dp"
        android:progress="1" />

    <TextView
        android:id="@+id/lowText"
        android:layout_row="5"
        android:layout_column="0"
        android:padding="20dp"
        android:text="@string/low" />

    <TextView
        android:id="@+id/highText"
        android:layout_row="5"
        android:layout_column="2"
        android:padding="20dp"
        android:text="@string/high" />


    <!--    Acoustic    -->

    <TextView
        android:id="@+id/acousticText"
        android:layout_row="6"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/acoustic" />

    <SeekBar
        android:id="@+id/acousticSeekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_row="7"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:max="2"
        android:padding="20dp"
        android:layout_marginBottom="40dp"
        android:progress="1" />

    <TextView
        android:id="@+id/noText"
        android:layout_row="7"
        android:layout_column="0"
        android:padding="20dp"
        android:text="@string/no" />

    <TextView
        android:id="@+id/yesText"
        android:layout_row="7"
        android:layout_column="2"
        android:padding="20dp"
        android:text="@string/yes" />


    <!--    Search-->

    <Button
        android:id="@+id/searchButton"
        android:layout_row="8"
        android:layout_column="1"
        android:layout_gravity="center"
        android:text="@string/search"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        ></Button>


</GridLayout>